# FREISA

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  install.sh
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh  setup.sh
.github/: dependabot.yml
.github/linters/: .jscpd.json  .python-lint
.github/workflows/: check-links.yml  linter.yml  publish_image.yaml
assets/images/: puppy-state-diagram-v1.excalidraw
assets/non-free/: README.md
assets/sounds/: README.md
code/: README.md  requirements.txt
code/FREISA-GPT/: README.md  main.py  pyproject.toml  servers_config.json
code/FREISA-GPT/mcp_client_pupper/: main.py  mcp_client.py  puppy_voice_assistant.py
code/FREISA-GPT/mcp_client_pupper/utils/: llm_client.py  puppy_interaction.py
code/FREISA-GPT/mcp_server_pupper/: main.py
code/FREISA-GPT/mcp_server_pupper/utils/: network_utils.py  websocket_manager.py
code/FREISA-GPT/puppy-sim/: docker-compose.yml
code/FREISA-GPT/src/mcp_client_pupper/: main.py  mcp_client.py  puppy_voice_assistant.py
code/FREISA-GPT/src/mcp_client_pupper/utils/: llm_client.py  math.py  puppy_interaction.py
code/FREISA-GPT/src/mcp_server_pupper/: main.py
code/FREISA-GPT/src/mcp_server_pupper/utils/: network_utils.py  websocket_manager.py
code/conv-heic2png/: README.md
code/depthai-docker/: README.md
code/dogface-server/: README.md  dogface.py
code/mcp-client-pupper/: main.py  pyproject.toml  servers_config.json
docs/: README.md  Tappo.STL  apis.md
freisa-3dparts/: README.md  readme.md
minipupper2-mods/: CameraBaseHh.STEP
(+86 files in other folders)
