[project]
name = "mcp-client-pupper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "fastapi-mcp>=0.2.0",
    "httpx>=0.28.1",
    "linkup-sdk>=0.2.4",
    "mcp[cli]>=1.6.0",
]

[tool.black]
line-length = 120
